--- a/cicd/Dockerfile
+++ b/cicd/Dockerfile
@@ -1,6 +1,6 @@
 
 
-FROM python:3.10.3-slim-buster as python-base
+FROM python:3.9.3-slim-buster as python-base
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=off \
@@ -12,8 +12,8 @@ ENV PYTHONUNBUFFERED=1 \
     PYSETUP_PATH="/opt/pysetup" \
     VENV_PATH="/opt/pysetup/.venv"
 
-RUN python -m pip install --upgrade pip
-RUN python -m pip install poetry
+RUN python -m pip install --no-cache-dir --upgrade pip
+RUN python -m pip install --no-cache-dir poetry
 
 WORKDIR $PYSETUP_PATH
 COPY ./poetry.lock ./pyproject.toml ./
