--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "3.9"
 os: linux
-script: python -m tests
+script: python -m pip install poetry && poetry install && python -m tests
